cloud/mdb/dbaas_worker/internal/resources/metastore/daemon-set.yaml
apiVersion: "apps/v1"
kind: DaemonSet
metadata:
  name: doublevpc-net-fix
  namespace: doublevpc-net-fix
  labels:
    k8s-app: doublevpc-net-fix
    version: 1v
spec:
  selector:
    matchLabels:
      k8s-app: doublevpc-net-fix
  template:
    metadata:
      labels:
        k8s-app: doublevpc-net-fix
    spec:
      hostPID: true
      hostNetwork: true
      containers:
      - name: doublevpc-net-fix
        image: cr.yandex/crpjfmfou6gflobbfvfv/ubuntu-openssl:stable
        command:
          - sh
          - -c
          - |
            while true ; do
                eth0_router_ip=$(ip route | grep "eth0" | grep -o "^10.[0-9.]*\.1")
                # Add explicit routes for k8s-nodes and k8s-services networks via service-vpc network interface
                for k8s_net in "10.24.0.0/16" "10.25.0.0/16" ; do
                     [ -n "$(ip route list ${k8s_net})" ] || ip route add ${k8s_net} via ${eth0_router_ip} dev eth0
                done
                # Delete default route for service-vpc network interface
                for router in "10.111.0.1" "10.112.0.1" "10.113.0.1" ; do
                     [ -z "$(ip route list default via ${router})" ] || ip route del default via ${router}
                done
                for net in "10.111.0.0/16" "10.112.0.0/16" "10.113.0.0/16" ; do
                     # Create cross-DC routes for non-default service-vpc network interface
                     [ -n "$(ip route list ${net})" ] || ip route add ${net} dev eth0
                done
                sleep 60
            done
        imagePullPolicy: Always
        securityContext:
          privileged: true
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 100Mi
        volumeMounts:
        - name: bin
          mountPath: /bin
        - name: lib
          mountPath: /lib
      volumes:
      - name: bin
        hostPath:
          path: /bin/
          type: Directory
      - name: lib
        hostPath:
          path: /lib/
          type: Directory
