cloud/mdb/dbaas_worker/internal/resources/metastore/metastore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metastore-service
  labels:
    run: metastore-service
spec:
  ports:
  - port: 9083
    name: thrift
  selector:
    app: metastore-server
  type: NodePort
