cloud/mdb/dbaas_worker/internal/resources/metastore/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: doublevpc-net-fix
spec:
  podSelector:
    matchLabels:
      k8s-app: doublevpc-net-fix
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:  []
